--- a/style.css
+++ b/style.css
@@ -61,6 +61,12 @@ input:focus, textarea:focus {
     border-color: #f06449;
 }
 
+#personal-logo {
+    width: 50px;
+    height: 50px;
+    padding: 4px 8px;
+}
+
 .container {
     padding: 50px 0;
     width: 100%;
